--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,10 @@ import com.android.build.OutputFile
  */
 
 apply from: "../../node_modules/react-native/react.gradle"
+project.ext.vectoricons = [
+    iconFontNames: ['Entypo.ttf', 'EvilIcons.ttf' ,'FontAwesome.ttf','Foundation.ttf','Ionicons.ttf','MaterialIcons.ttf','Octicons.ttf','SimpleLineIcons.ttf','Zocial.ttf' ] // Name of the font files you want to copy
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -129,6 +133,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
