--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-	"name": "ITalk",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "~15.3.1",
-		"react-native": "0.37.0"
-	},
-	"devDependencies": {
-		"babel-jest": "17.0.2",
-		"babel-preset-react-native": "1.9.0",
-		"jest": "17.0.3",
-		"jest-react-native": "17.0.3",
-		"react-test-renderer": "~15.3.1"
-	},
-	"jest": {
-		"preset": "jest-react-native"
-	}
+  "name": "ITalk",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "mockjs": "^1.0.1-beta3",
+    "react": "~15.3.1",
+    "react-native": "0.37.0",
+    "react-native-tab-navigator": "^0.3.3",
+    "react-native-vector-icons": "^3.0.0"
+  },
+  "devDependencies": {
+    "babel-jest": "17.0.2",
+    "babel-preset-react-native": "1.9.0",
+    "jest": "17.0.3",
+    "jest-react-native": "17.0.3",
+    "react-test-renderer": "~15.3.1"
+  },
+  "jest": {
+    "preset": "jest-react-native"
+  }
 }
